# cipha

./: CLI.md  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
cipha/: Cargo.toml
cipha-cli/: Cargo.toml  README.md
cipha-cli/src/: main.rs
cipha-cli/tests/: cli_tests.rs
cipha-lib/: Cargo.toml
cipha-lib/src/: ciphers.rs  lib.rs
cipha/src/: lib.rs  mod.rs
docs/: crates.js  help.html  index.html  search-index.js  src-files.js
docs/cipha/: all.html  index.html  sidebar-items.js
docs/cipha/ciphers/: index.html  struct.CaesarCipher.html  struct.MorseCode.html  struct.Rot13Cipher.html
docs/cipha/utils/: fn.alpha2num.html  fn.atbash_cipher.html  fn.atbash_decipher.html  fn.caesar_cipher.html  fn.create_reverse_morse_code_map.html  fn.morse_code_cipher.html  fn.num2alpha.html  fn.rail_fence_cipher.html  fn.rail_fence_decipher.html  fn.rot13.html  fn.vigenere_cipher.html  fn.vigenere_decipher.html  index.html  sidebar-items.js
docs/cipha_cli/: enum.Command.html  fn.decode_message.html  fn.encode_message.html  fn.get_message.html  fn.main.html  index.html  struct.Cli.html
docs/cipha_lib/: all.html  fn.alpha2num.html  fn.atbash_cipher.html  fn.atbash_decipher.html  fn.caesar_cipher.html  fn.create_morse_code_map.html  fn.create_reverse_morse_code_map.html  fn.morse_code_cipher.html  fn.morse_code_decipher.html  fn.num2alpha.html  fn.rail_fence_cipher.html  fn.rail_fence_decipher.html  fn.reverse_cipher.html  fn.rot13.html  fn.vigenere_cipher.html  fn.vigenere_decipher.html  index.html  sidebar-items.js
docs/cipha_lib/ciphers/: index.html  sidebar-items.js  struct.AlphaNumConverter.html  struct.AtbashCipher.html  struct.CaesarCipher.html  struct.MorseCode.html  struct.Rot13Cipher.html  struct.VigenereCipher.html
docs/doc/: crates.js  settings.html  src-files.js
docs/doc/cipha/: index.html
docs/doc/cipha_cli/: all.html  enum.Command.html  fn.main.html  (+2 more)
(+31 files in other folders)
