[package]
name = "cipha-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jesse JCharis"]
description = "CLI for classical ciphers"
readme = "README.md"
homepage = "https://github.com/jcharistech/cipha"
repository = "https://github.com/jcharistech/cipha"
keywords = ["ciphers", "cryptography", "classical-ciphers", "cipha"]
categories = ["ciphers", "command-line-utilities"]
license = "MIT"

[dependencies]
structopt = "0.3.26"
cipha = { path= "../cipha"}
assert_cmd = "2.0.16"

[[bin]]
name = "cipha-cli"
path = "src/main.rs"
# doc = false  # Disable documentation for this binary
