[package]
name = "cipha-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jesse JCharis"]
description = "CLI for classical ciphers"
readme = "README.md"
homepage = "https://jcharistech.github.io/cipha/cipha/"
repository = "https://github.com/jcharistech/cipha"
keywords = ["ciphers", "cryptography", "classical-ciphers", "cipha"]
categories = ["cryptography", "command-line-interface", "command-line-utilities"]
license = "MIT"

[dependencies]
structopt = "0.3.26"
cipha = { path= "../cipha", version = "*"}
assert_cmd = "2.0.16"

[[bin]]
name = "cipha-cli"
path = "src/main.rs"
# doc = false  # Disable documentation for this binary

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
