[package]
name = "cipha"
version = "0.1.0"
edition = "2021"
authors = ["Jesse JCharis"]
description = "Library for classical ciphers"
readme = "README.md"
homepage = "https://jcharistech.github.io/cipha/cipha/"
repository = "https://github.com/jcharistech/cipha"
keywords = ["ciphers", "cryptography", "classical-ciphers", "cipha"]
categories = ["cryptography", "command-line-interface", "encoding"]
license = "MIT"

[dependencies]


[lib]
path = "src/lib.rs"

